Fix: Bundle node.exe with Windows build to work without Node.js installation

--- a/Code/Backend/electron/package.json
+++ b/Code/Backend/electron/package.json
@@ -15,6 +15,7 @@
   "build": {
     "appId": "com.stackedhouse.coupa-downloader",
     "productName": "Coupa Invoice Downloader",
+    "afterPack": "./build-hook.js",
     "directories": {
       "output": "dist"
     },
